updated descriptor, container, and script for full mca env

--- a/code/tractography/dipy/Dockerfile.fuzzy
+++ b/code/tractography/dipy/Dockerfile.fuzzy
@@ -11,4 +11,6 @@ RUN pip3.6 install scipy cython &&\
 
 COPY ./dipy_deterministic_tracking.py /opt/dipy_deterministic_tracking.py
 
+ENV VERIFICARLO_MCAMODE RR
+
 ENTRYPOINT ["python3.6", "/opt/dipy_deterministic_tracking.py"]
