--- a/code/tractography/dipy/Dockerfile
+++ b/code/tractography/dipy/Dockerfile
@@ -7,6 +7,6 @@ RUN apk --no-cache --update-cache --allow-untrusted \
 RUN pip3 install nibabel dipy matplotlib onevox boutiques
 
 RUN mkdir -p /opt
-COPY ./dipy_deterministic_tracking.py /opt/dipy_deterministic_tracking.py
+COPY ./dipy_tracking.py /opt/dipy_tracking.py
 
-ENTRYPOINT ["python3", "/opt/dipy_deterministic_tracking.py"]
+ENTRYPOINT ["python3", "/opt/dipy_tracking.py"]
