--- a/code/tractography/dipy/Dockerfile.fuzzy
+++ b/code/tractography/dipy/Dockerfile.fuzzy
@@ -12,6 +12,8 @@ RUN pip3.6 install scipy cython &&\
 
 COPY ./dipy_tracking.py /opt/dipy_tracking.py
 
+RUN ln -sf /bin/bash /bin/sh
 ENV VFC_BACKENDS "libinterflop_mca.so -m rr"
+
 
 ENTRYPOINT ["python3.6", "/opt/dipy_tracking.py"]
